--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <br>
   <h2><i>Learning...</i></h2>
   <ul>
-    <li>Java programming</li>
+    <li>c programming</li>
 
     <li>Web developement</li>
 
