Added s to name

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <img src="dogpic.png" alt="profile picture" hei.height="200" width="200">
       </td>
       <td>
-        <h1>Shaktishankar Acharya a</h1>
+        <h1>sShaktishankar Acharya a</h1>
         <p>Hi, <br>
           I'm <em><b>Shaktishankar Acharya</b></em>. I love Coffee and Snacks.</p>
       </td>
